--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux-toastr": "^7.5.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-form": "^8.2.1",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0"
