--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-redux-toastr": "^7.5.1",
