--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap-datetimepicker": "0.0.22",
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
+    "react-ionicons": "^3.0.1",
     "react-redux": "^7.0.3",
     "react-redux-toastr": "^7.5.1",
     "react-scripts": "3.0.1",
