fix: update package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotifood",
-  "homepage": "hhttp://paulomoreno.me/ifood-frontend-test",
+  "homepage": "http://paulomoreno.github.io/ifood-frontend-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
