--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_PROD_REDIRECT_URL=http://paulomoreno.me/ifood-frontend-test
+REACT_APP_PROD_REDIRECT_URL=https://paulomoreno.github.io/ifood-frontend-test/
 REACT_APP_DEV_REDIRECT_URL=http://localhost:3000
