refactor: move client_id to env file

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_PROD_REDIRECT_URL=https://paulomoreno.github.io/ifood-frontend-test/
 REACT_APP_DEV_REDIRECT_URL=http://localhost:3000
+# Note that the client_id does not need to be secret - only the client_secret
+REACT_APP_CLIENT_ID=525daf8037874b95b21b21fda6399d0e
