--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "lint": "eslint src/**/*.js --fix"
+    "lint": "eslint src/**/**/*.js src/**/*.js --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
